fixed footer z-index

--- a/sfh-test/src/views/MainView/MainView.css
+++ b/sfh-test/src/views/MainView/MainView.css
@@ -41,5 +41,6 @@
     }
     footer {
         transform: translateY(-50px);
+        z-index: -1;
     }
 }
